--- a/package.json
+++ b/package.json
@@ -2,9 +2,21 @@
   "name": "substrate-tx-seed",
   "version": "1.0.0",
   "description": "Library of scripts to seed a substrate based dev node.",
-  "main": "index.js",
+  "main": "main.js",
   "repository": "https://github.com/emostov/substrate-tx-seed.git",
   "author": "Zeke Mostov <emostov@middlebury.edu>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "lint": "tsc --noEmit && eslint . --ext ts",
+    "build": "tsc",
+    "start": "ts-node ./src/main.ts"
+  },
+  "dependencies": {
+    "@amaurymartiny/config": "^1.3.0",
+    "@polkadot/api": "^1.17.2",
+    "@polkadot/types": "^1.17.2",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.3"
+  }
 }
