--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@amaurymartiny/config": "^1.3.0",
     "@polkadot/api": "^1.17.2",
     "@polkadot/types": "^1.17.2",
+    "@polkadot/util": "^2.15.1",
+    "@polkadot/util-crypto": "^2.15.1",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
   }
